fix: align content in watch-online block

--- a/online-zoo/pages/landing/landing.css
+++ b/online-zoo/pages/landing/landing.css
@@ -145,7 +145,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 56px 0 0 96px;
+  margin: 55px 0 0 0px;
 }
 .aside {
   background:  #fcfcfc;
@@ -197,7 +197,7 @@ header {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  margin-bottom: 60px;
+  margin-bottom: 33px;
 }
 .watch-online-wrapper-content__h2 {
   font-style: normal;
